--- a/src/research.html
+++ b/src/research.html
@@ -16,7 +16,7 @@
 	</div>
 	<div id="navigation">
 		<ul>
-			<li><a href="./index.html">Home</a></li>
+			<li><a href="../index.html">Home</a></li>
 			<li class="selected"><a href="./src/research.html">Research</a></li>
 			<li><a href="./src/teaching.html">Teaching</a></li>
 			<li><a href="./src/courses.html">Online courses</a></li>
