--- a/src/videogames.html
+++ b/src/videogames.html
@@ -16,21 +16,16 @@
 	</div>
 	<div id="navigation">
 		<ul>
-			<li class="selected"><a href="../index.html">Home</a></li>
-			<li><a href="./pagina.php?pag=research">Research</a></li>
-			<li><a href="./pagina.php?pag=teaching">Teaching</a></li>
-			<li><a href="./pagina.php?pag=courses">Online courses</a></li>
-			<li><a href="./pagina.php?pag=books">Books</a></li>
-			<li><a href="./pagina.php?pag=videogames">Videogames</a></li>
-			<li><a href="./pagina.php?pag=contact">Contact</a></li>
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="./src/research.html">Research</a></li>
+			<li><a href="./src/teaching.html">Teaching</a></li>
+			<li><a href="./src/courses.html">Online courses</a></li>
+			<li><a href="./src/books.html">Books</a></li>
+			<li class="selected"><a href="./src/videogames.html">Videogames</a></li>
+			<li><a href="./src/contact.html">Contact</a></li>
 		</ul>
 	</div>
 	
-	
-<br />
-<b>Warning</b>:  Use of undefined constant pag - assumed 'pag' (this will throw an Error in a future version of PHP) in <b>/users/apache/giant.uji.es/htdocs/montoliu/src/pagina.php</b> on line <b>3</b><br />
-<br />
-<b>Warning</b>:  Use of undefined constant sub - assumed 'sub' (this will throw an Error in a future version of PHP) in <b>/users/apache/giant.uji.es/htdocs/montoliu/src/pagina.php</b> on line <b>4</b><br />
 <div id="content">	
 	<h2>NDS Videogames implemented by students in the subject VJ1214</h2>
 	
