--- a/src/research.html
+++ b/src/research.html
@@ -17,12 +17,12 @@
 	<div id="navigation">
 		<ul>
 			<li><a href="../index.html">Home</a></li>
-			<li class="selected"><a href="./src/research.html">Research</a></li>
-			<li><a href="./src/teaching.html">Teaching</a></li>
-			<li><a href="./src/courses.html">Online courses</a></li>
-			<li><a href="./src/books.html">Books</a></li>
-			<li><a href="./src/videogames.html">Videogames</a></li>
-			<li><a href="./src/contact.html">Contact</a></li>
+			<li class="selected"><a href="./research.html">Research</a></li>
+			<li><a href="./teaching.html">Teaching</a></li>
+			<li><a href="./courses.html">Online courses</a></li>
+			<li><a href="./books.html">Books</a></li>
+			<li><a href="./videogames.html">Videogames</a></li>
+			<li><a href="./contact.html">Contact</a></li>
 		</ul>
 	</div>
 	
