--- a/src/courses.html
+++ b/src/courses.html
@@ -17,12 +17,12 @@
 	<div id="navigation">
 		<ul>
 			<li><a href="../index.html">Home</a></li>
-			<li><a href="./src/research.html">Research</a></li>
-			<li><a href="./src/teaching.html">Teaching</a></li>
-			<li class="selected"><a href="./src/courses.html">Online courses</a></li>
-			<li><a href="./src/books.html">Books</a></li>
-			<li><a href="./src/videogames.html">Videogames</a></li>
-			<li><a href="./src/contact.html">Contact</a></li>
+			<li><a href="./research.html">Research</a></li>
+			<li><a href="./teaching.html">Teaching</a></li>
+			<li class="selected"><a href="./courses.html">Online courses</a></li>
+			<li><a href="./books.html">Books</a></li>
+			<li><a href="./videogames.html">Videogames</a></li>
+			<li><a href="./contact.html">Contact</a></li>
 		</ul>
 	</div>
 	
@@ -72,18 +72,9 @@
 	
 </div>
 
-<!--
-<div id="subcontent">
-	<h2>Menu Docencia</h2>
-	<ul class="menublock">
-		<li><a href="./pagina.php?pag=teaching&sub=home">Docencia home</a></li>
-		<li><a href="./pagina.php?pag=teaching&sub=pfc">Proyectos fin de carrera</a></li>
-		<li><a href="./pagina.php?pag=teaching&sub=pfm">Proyectos fin de master</a></li>
-	</ul>
-</div>
--->	
+
 	<div id="footer">
-		<p>&copy; 2019 Ra&uacute;l Montoliu | Design based on <a href="http://andreasviklund.com/">free website templates</a></p>
+		<p>&copy; 2020 Ra&uacute;l Montoliu | Design based on <a href="http://andreasviklund.com/">free website templates</a></p>
 	</div>
 </div>
 
