--- a/src/teaching.html
+++ b/src/teaching.html
@@ -17,12 +17,12 @@
 	<div id="navigation">
 		<ul>
 			<li><a href="../index.html">Home</a></li>
-			<li><a href="./src/research.html">Research</a></li>
-			<li class="selected"><a href="./src/teaching.html">Teaching</a></li>
-			<li><a href="./src/courses.html">Online courses</a></li>
-			<li><a href="./src/books.html">Books</a></li>
-			<li><a href="./src/videogames.html">Videogames</a></li>
-			<li><a href="./src/contact.html">Contact</a></li>
+			<li><a href="./research.html">Research</a></li>
+			<li class="selected"><a href="./teaching.html">Teaching</a></li>
+			<li><a href="./courses.html">Online courses</a></li>
+			<li><a href="./books.html">Books</a></li>
+			<li><a href="./videogames.html">Videogames</a></li>
+			<li><a href="./contact.html">Contact</a></li>
 		</ul>
 	</div>
 	
@@ -34,50 +34,52 @@
 	   de la <a href="http://www.uji.es">Universidad Jaume I</a>. 
 	 </p>
 
-   <p>
+
+ 	<h3>Asignaturas curso 2019/2020:</h3>
+	<ul>
+		<li><b>VJ1234</b>: T&eacute;cnicas de interacci&oacute;n avanzada. Grado en Diseño y Desarrollo de Videojuegos. </li>
+		<li><b>VJ1214</b>: Consolas y dispositivos de videojuegos. Grado en Diseño y Desarrollo de Videojuegos.</li>	
+	</ul>	
+
+
+
  	<h3>Asignaturas curso 2018/2019:</h3>
-	<br>
 	<ul>
 		<li><b>VJ1234</b>: T&eacute;cnicas de interacci&oacute;n avanzada. Grado en Diseño y Desarrollo de Videojuegos. </li>
 		<li><b>VJ1214</b>: Consolas y dispositivos de videojuegos. Grado en Diseño y Desarrollo de Videojuegos.</li>	
 		<li><b>EI1014</b>: Sistemas operativos. Grado en Informática.</li>		
 		<li><b>EX1003</b>: Informática. Grados en Ingeniería Industrial, Mecánica y Eléctrica.</li>		
 	</ul>	
-	</p>
-   <!--
+
+   
      <h3>Asignaturas curso 2016/2017:</h3>
-	<br>
 	<ul>
 		<li><b>EE1037</b>: Electr&oacute;nica digital y microcontroladores. Grado en Ingenier&iacute;a El&eacute;ctrica </li>
 		<li><b>VJ1234</b>: T&eacute;cnicas de interacci&oacute;n avanzada. Grado en Diseño y Desarrollo de Videojuegos. </li>
 		<li><b>VJ1241</b>: Trabajo fin de grado. Grado en Diseño y Desarrollo de Videojuegos </li>			
 		<li><b>SW001</b>: Programing. Erasmus Mundus Master of Science in Geospatial Technologies. </li>		
 	</ul>	
-	</p>
--->
-	<!--
+
+
    <h3>Asignaturas curso 2015/2016:</h3>
-	<br>
 	<ul>
 		<li><b>EE1037</b>: Electr&oacute;nica digital y microcontroladores. Grado en Ingenier&iacute;a El&eacute;ctrica </li>
 		<li><b>VJ1234</b>: T&eacute;cnicas de interacci&oacute;n avanzada. Grado en Diseño y Desarrollo de Videojuegos. </li>
 		<li><b>VJ1241</b>: Trabajo fin de grado. Grado en Diseño y Desarrollo de Videojuegos </li>			
 		<li><b>SW001</b>: Programing. Erasmus Mundus Master of Science in Geospatial Technologies. </li>		
 	</ul>	
-	</p>
+
     
 	<h3>Asignaturas curso 2014/2015:</h3>
-	<br>
 	<ul>
 		<li><b>VJ1202</b>: Inform&aacute;tica B&aacute;sica </li>
 		<li><b>EI1004/MT1004</b>: Estructura de Computadores </li>
 		<li><b>EI1054</b>: Pr&aacute;cticas externas y proyecto fin de grado </li>			
 	</ul>	
-	</p>
+
    
   
 	<h3>Asignaturas curso 2013/2014:</h3>
-	<br>
 	<ul>
 		<li><b>VJ1202</b>: Inform&aacute;tica B&aacute;sica </li>
 		<li><b>EI1010/MT1010</b>: Arquitectura de Computadores </li>
@@ -86,13 +88,10 @@
 		<li><b>933</b>: Mantenimento de Sistemes Informatizados </li>
 		<li><b>II31</b>: Proyectos inform&aacute;ticos. </li>
 		<li><b>II51/IS51</b>: Redes de &aacute;rea local </li>
-		
 	</ul>	
-	</p>
-	-->
-	<!--
+
+
 	<h3>Asignaturas curso 2011/2012:</h3>
-	<br>
 	<ul>
 		<li><b>IB14</b>: Inform&aacute;tica para la construcci&oacute;n [<a href="https://aulavirtual.uji.es/course/view.php?id=19058">web</a>].</li>
 		<li><b>933</b>: Mantenimento de Sistemes Informatizados [<a href="">web</a>].</li>
@@ -102,12 +101,9 @@
     	<li><b>IG30</b>: Estancia en pr&aacute;cticas. [<a href="https://aulavirtual.uji.es/course/view.php?id=17926">web</a>]</li>
 		<li><b>RB96</b>: Inform&aacute;tica b&aacute;sica para ciencias jur&iacute;dicas. [<a href="https://aulavirtual.uji.es/course/view.php?id=20809">web</a>]</li>
 	</ul>	
-	</p>
-	-->
-	<!--
-	<p>
+
 	<h3>Asignaturas curso 2010/2011:</h3>
-	<br>
+
 	<ul>
 		<li><b>IB14</b>: Inform&aacute;tica para la construcci&oacute;n [<a href="https://aulavirtual.uji.es/course/view.php?id=13904">web</a>].</li>
 		<li><b>933</b>: Mantenimento de Sistemes Informatizados [<a href="https://aulavirtual.uji.es/course/view.php?id=14792">web</a>]..</li>
@@ -116,27 +112,12 @@
 		<li><b>IS31</b>: Proyectos inform&aacute;ticos. [<a href="http://mermaja.act.uji.es/~proyecto/proyectos/">web</a>]</li>
     
 	</ul>	
-	</p>
-	-->
-<!--  <p>
-  <h3>Horario de Tutor&iacute;as 2011/12:</h3>
-  
-  
-  </p>
-  -->
+
   
 </div>
-<div id="subcontent">
-	<h2>Menu Docencia</h2>
-	<ul class="menublock">
-		<li><a href="./pagina.php?pag=teaching&sub=home">Docencia home</a></li>
-		<li><a href="./pagina.php?pag=teaching&sub=pfc">Proyectos fin de carrera</a></li>
-		<li><a href="./pagina.php?pag=teaching&sub=pfm">Proyectos fin de master</a></li>
-		<li><a href="./pagina.php?pag=courses">Cursos online</a></li>
-	</ul>
-</div>	
+
 	<div id="footer">
-		<p>&copy; 2019 Ra&uacute;l Montoliu | Design based on <a href="http://andreasviklund.com/">free website templates</a></p>
+		<p>&copy; 2020 Ra&uacute;l Montoliu | Design based on <a href="http://andreasviklund.com/">free website templates</a></p>
 	</div>
 </div>
 
