--- a/src/research.html
+++ b/src/research.html
@@ -46,15 +46,24 @@
 			<b>Efficient Heuristic Policy Optimisation for a Challenging Strategic Card Game</b>.
 			23rd International Conference on the Applications of Evolutionary and Bio-inspired Computation
 			<a href="https://http://www.evostar.org/2020/">EVOSTAR 2020</a>.
-		</p>
+			</p>
 		</li>
 
 		<li>
 			<p align="justify">
-			O. Belmonte, E. Sansano, R. García-Vidal, R- Montoliu, A. Caballer-Miedes, E. Chinellato.
+			E. Sansano, R. Montoliu, O. Belmont.
+			<b>A study of Deep Neural Networks for Human Activity Recognition</b>.	
+			Computational Intelligence.
+			<span style="color:red">Accepted</span>.
+			</p>
+
+		<li>
+			<p align="justify">
+			O. Belmonte, E. Sansano, R. García-Vidal, R. Montoliu, A. Caballer-Miedes, E. Chinellato.
 			<b>Anomaly detection on Activities of Daily Living with Linear Drift</b>.	
 			Cognitive Computation.
 			<span style="color:red">Accepted</span>.
+			</p>
 	</ul>
 
 
