--- a/src/research.html
+++ b/src/research.html
@@ -51,7 +51,7 @@
 
 		<li>
 			<p align="justify">
-			E. Sansano, R. Montoliu, O. Belmont.
+			E. Sansano, R. Montoliu, O. Belmonte.
 			<b>A study of Deep Neural Networks for Human Activity Recognition</b>.	
 			Computational Intelligence.
 			<span style="color:red">Accepted</span>.
