--- a/src/research.html
+++ b/src/research.html
@@ -30,22 +30,31 @@
 <div id="content">	
 	<h2>Research</h2>
 	<p align=justify>I belong to the <a href="http://www.init.uji.es">iNIT</a> research institute. 
-	   My actual main research interest are: <b>Indoor localization and navigation</b>, <b>Game AI</b> and <b>Machine learning</b></p>
+	   My actual main research interest are: <b>Machine learning</b>, <b>e-Health</b>, <b>Game AI</b> and <b>Indoor localization</b>.</p>
 	
-		<p align=justify>
-	   Past research interest include: <b>Sport analysis</b>, <b>Smart cities</b>,  <b>Human and social behavior from sensor data</b>,  
-	    <b>Image registration</b>, <b>Motion estimation and segmentation</b>, <b>Human detection</b> and <b>Human action recognition</b>.</p>
+	<p align=justify>
+	   Past research interest include: <b>Sport analysis</b>, <b>Smart cities</b>,  <b>Human and social behavior from sensor data</b>,   <b>Image registration</b>, <b>Motion estimation and segmentation</b>, <b>Human detection</b> and <b>Human action recognition</b>.</p>
 	
 	<h2>List of my publications:</h2>
 
 	<h3>2020</h3>
 	<ul>
+
 		<li>
 			<p align="justify">
-			A. Boix, J.M. Pereles, R. Montoliu.
+			R. Montoliu, E. Sansano, A. Gascó, O. Belmonte, A. Caballer.
+			<b>Indoor positioning for monitoring older adults at home: Wi-Fi and BLE technologies in real scenarios</b>.
+			Electronics, 2020
+			<span style="color:red">Accepted</span>.
+			</p>
+		</li>
+
+		<li>
+			<p align="justify">
+			R. Montoliu, R.D. Gaina, D. Perez-Leibana. D. Delgado, S. Lucas
 			<b>Efficient Heuristic Policy Optimisation for a Challenging Strategic Card Game</b>.
 			23rd International Conference on the Applications of Evolutionary and Bio-inspired Computation
-			<a href="https://http://www.evostar.org/2020/">EVOSTAR 2020</a>.
+			<a href="https://http://www.evostar.org/2020/">EVOSTAR 2020</a>. [<a href="https://link.springer.com/chapter/10.1007/978-3-030-43722-0_26">online version</a>]
 			</p>
 		</li>
 
@@ -53,15 +62,15 @@
 			<p align="justify">
 			E. Sansano, R. Montoliu, O. Belmonte.
 			<b>A study of Deep Neural Networks for Human Activity Recognition</b>.	
-			Computational Intelligence.
-			<span style="color:red">Accepted</span>.
+			Computational Intelligence, 2020.
+			[<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/coin.12318">online version</a>]
 			</p>
 
 		<li>
 			<p align="justify">
 			O. Belmonte, E. Sansano, R. García-Vidal, R. Montoliu, A. Caballer-Miedes, E. Chinellato.
 			<b>Anomaly detection on Activities of Daily Living with Linear Drift</b>.	
-			Cognitive Computation.
+			Cognitive Computation, 2020.
 			<span style="color:red">Accepted</span>.
 			</p>
 	</ul>
