--- a/src/research.html
+++ b/src/research.html
@@ -29,8 +29,8 @@
 	
 <div id="content">	
 	<h2>Research</h2>
-	<p align=justify>I belong to the <a href="http://www.init.uji.es">iNIT</a> research institute. 
-	   My actual main research interest are: <b>Machine learning</b>, <b>e-Health</b>, <b>Game AI</b> and <b>Indoor localization</b>.</p>
+	<p align=justify>I belong to the <a href="http://giant.uji.es">GIANT</a> research group from the <a href="http://www.init.uji.es">iNIT</a> research institute. 
+	  My actual main research interest are: <b>Machine learning</b>, <b>e-Health</b>, <b>Game AI</b> and <b>Indoor localization</b>.</p>
 	
 	<p align=justify>
 	   Past research interest include: <b>Sport analysis</b>, <b>Smart cities</b>,  <b>Human and social behavior from sensor data</b>,   <b>Image registration</b>, <b>Motion estimation and segmentation</b>, <b>Human detection</b> and <b>Human action recognition</b>.</p>
