--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     		<p align=justify>I am a member of the <a href="http://www.icc.uji.es">Departamento de Ingenier&iacute;a y Ciencia de los Computadores</a>  of the <a href="http://www.uji.es">Jaume I University (UJI)</a>
         [<a href="http://maps.google.es/maps?f=q&source=s_q&hl=es&geocode=&q=universidad+jaume+i&sll=40.396764,-3.713379&sspn=12.509923,20.34668&ie=UTF8&t=h&ll=39.992805,-0.068858&spn=0.012297,0.028024&z=16">Map</a>], Castell&oacute;n, Spain.</p>
  
-		<p align=justify>I belong to the <a href="http://www.init.uji.es">iNIT</a> research institute. 
-	  My actual main research interest are: <b>Indoor localization and navigation</b>, <b>Game AI</b> and <b>Machine learning</b></p>
+		<p align=justify>I belong to the <a href="http://giant.uji.es">GIANT</a> research group from the <a href="http://www.init.uji.es">iNIT</a> research institute. 
+	  My actual main research interest are: <b>Machine learning</b>, <b>e-Health</b>, <b>Game AI</b> and <b>Indoor localization</b>.</p>
 	
 		<p align=justify>
 	   Past research interest include: <b>Sport analysis</b>, <b>Smart cities</b>,  <b>Human and social behavior from sensor data</b>,  
