--- a/src/research.html
+++ b/src/research.html
@@ -44,8 +44,7 @@
 			<p align="justify">
 			R. Montoliu, E. Sansano, A. Gascó, O. Belmonte, A. Caballer.
 			<b>Indoor positioning for monitoring older adults at home: Wi-Fi and BLE technologies in real scenarios</b>.
-			Electronics, 2020
-			<span style="color:red">Accepted</span>.
+			Electronics 2020, 9(5), 728. [<a href="https://doi.org/10.3390/electronics9050728">online version</a>]
 			</p>
 		</li>
 
