--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 	  My actual main research interest are: <b>Machine learning</b>, <b>e-Health</b>, <b>Game AI</b> and <b>Indoor localization</b>.</p>
 	
 		<p align=justify>
-	   Past research interest include: <b>Sport analysis</b>, <b>Smart cities</b>,  <b>Human and social behavior from sensor data</b>,  
-	    <b>Image registration</b>, <b>Motion estimation and segmentation</b>, <b>Human detection</b> and <b>Human action recognition</b>.</p>
+	   Past research interest include: Sport analysis, Smart cities, Human and social behavior from sensor data,  
+	   Image registration, Motion estimation and segmentation, Human detection and Human action recognition.</p>
 
 
         
