--- a/src/research.html
+++ b/src/research.html
@@ -32,13 +32,30 @@
 	<p align=justify>I belong to the <a href="http://giant.uji.es">GIANT</a> research group from the <a href="http://www.init.uji.es">iNIT</a> research institute. 
 	  My actual main research interest are: <b>Machine learning</b>, <b>e-Health</b>, <b>Game AI</b> and <b>Indoor localization</b>.</p>
 	
-	<p align=justify>
-	   Past research interest include: <b>Sport analysis</b>, <b>Smart cities</b>,  <b>Human and social behavior from sensor data</b>,   <b>Image registration</b>, <b>Motion estimation and segmentation</b>, <b>Human detection</b> and <b>Human action recognition</b>.</p>
+		<p align=justify>
+	   Past research interest include: Sport analysis, Smart cities, Human and social behavior from sensor data,  
+	   Image registration, Motion estimation and segmentation, Human detection and Human action recognition.</p>
 	
 	<h2>List of my publications:</h2>
 
 	<h3>2020</h3>
 	<ul>
+
+		<li>
+			<p align="justify">
+			E. Sansano-Sansano, O. Belmonte-Fernández, R. Montoliu, A. Gascó-Compte, A. Caballer-Miedes.
+			<b>Multimodal Sensor Data Integration for Indoor Positioning in Ambient-Assisted Living Environments</b>.
+			 Mobile Information Systems, vol. 2020. [<a href="https://doi.org/10.1155/2020/5204158">online version</a>]
+			</p>
+		</li>
+
+		<li>
+			<p align="justify">
+			E. Sansano, R. Montoliu, O. Belmonte Fernández.
+			<b>A study of deep neural networks for human activity recognition</b>.
+			Comptational Intelligence, Vol. 36, Issue 3, pp 1113-1139, 2020. [<a href="http://dx.doi.org/10.1111/coin.12318">online version</a>]
+			</p>
+		</li>
 
 		<li>
 			<p align="justify">
@@ -59,18 +76,10 @@
 
 		<li>
 			<p align="justify">
-			E. Sansano, R. Montoliu, O. Belmonte.
-			<b>A study of Deep Neural Networks for Human Activity Recognition</b>.	
-			Computational Intelligence, 2020.
-			[<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/coin.12318">online version</a>]
-			</p>
-
-		<li>
-			<p align="justify">
 			O. Belmonte, E. Sansano, R. García-Vidal, R. Montoliu, A. Caballer-Miedes, E. Chinellato.
 			<b>Anomaly detection on Activities of Daily Living with Linear Drift</b>.	
 			Cognitive Computation, 2020.
-			<span style="color:red">Accepted</span>.
+			[<a href="https://doi.org/10.1007/s12559-020-09740-6">online version</a>]
 			</p>
 	</ul>
 
