--- a/src/research.html
+++ b/src/research.html
@@ -89,8 +89,19 @@
 	<ul>
 
 		<li>
+			<p align="justify">
+			R. Montoliu, E. Sansano, A. Gascó, O. Belmonte, A. Caballer.
+			<b>Senior monitoring: a real case of applying a WiFi fingerprinting-based indoor positioning method for people monitoring.</b>.
+			10th International Conference on Indoor Positioning and Indoor Navigation (IPIN'19)
 
-		<p align="justify">
+			[<a href="http://ceur-ws.org/Vol-2498/short13.pdf">online version</a>].
+
+			</p>
+		</li>
+
+
+		<li>
+			<p align="justify">
 			A. Boix, J.M. Pereles, R. Montoliu.
 			<b>Learn2Escape: Una experiencia interactiva de aprendizaje</b>.
 			XXV Edición de las Jornadas sobre la Enseñanza Universitaria de la Informática
