--- a/src/research.html
+++ b/src/research.html
@@ -43,6 +43,15 @@
 
 		<li>
 			<p align="justify">
+			Raluca Gaina, Diego Perez Liebana, Alexander Dockhorn, Martin Balla and Raul Montoliu.
+			<b>TAG: A Tabletop Games Framework</b>.
+			 Accepted to be published in 2020 Experimental AI in Games workshop (EXAG'20).
+			</p>
+		</li>
+
+
+		<li>
+			<p align="justify">
 			E. Sansano-Sansano, O. Belmonte-Fernández, R. Montoliu, A. Gascó-Compte, A. Caballer-Miedes.
 			<b>Multimodal Sensor Data Integration for Indoor Positioning in Ambient-Assisted Living Environments</b>.
 			 Mobile Information Systems, vol. 2020. [<a href="https://doi.org/10.1155/2020/5204158">online version</a>]
