--- a/src/research.html
+++ b/src/research.html
@@ -49,6 +49,14 @@
 			</p>
 		</li>
 
+		<li>
+			<p align="justify">
+			Alejandro Estaben, César Díaz, Raul Montoliu, Diego Pérez-Liebana.
+			<b>TotalBotWar: A New Pseudo Real-time Multi-action Game Challenge and Competition for AI</b>.
+			ArXiv, 2020. [<a href="https://arxiv.org/abs/2009.08696">online version</a>]
+			</p>
+		</li>
+
 
 		<li>
 			<p align="justify">
