--- a/src/research.html
+++ b/src/research.html
@@ -51,9 +51,17 @@
 
 		<li>
 			<p align="justify">
+			Raluca Gaina, Diego Perez Liebana, Alexander Dockhorn, Martin Balla and Raul Montoliu.
+			<b>Design and Implementation of TAG: A Tabletop Games Framework</b>.
+			 arXiv:2009.12065 [cs.AI], 2020. [<a href="https://arxiv.org/abs/2009.12065">online version</a>]
+			</p>
+		</li>
+
+		<li>
+			<p align="justify">
 			Alejandro Estaben, César Díaz, Raul Montoliu, Diego Pérez-Liebana.
 			<b>TotalBotWar: A New Pseudo Real-time Multi-action Game Challenge and Competition for AI</b>.
-			ArXiv, 2020. [<a href="https://arxiv.org/abs/2009.08696">online version</a>]
+			arXiv:2009.08696 [cs.AI], 2020. [<a href="https://arxiv.org/abs/2009.08696">online version</a>]
 			</p>
 		</li>
 
