--- a/src/research.html
+++ b/src/research.html
@@ -41,6 +41,15 @@
 	<h3>2020</h3>
 	<ul>
 
+				<li>
+			<p align="justify">
+			Antonio Caballer, Oscar Belmonte, Andrea Castillo, Arturo Gasco, Emilio Sansano, Raul Montoliu.
+			<b>Equivalence of chatbot and paper-and-pencil versions of the De Jong Gierveld loneliness scale</b>.
+			 Current Psychology, 2020.
+			 [<a href="https://doi.org/10.1007/s12144-020-01117-0">online version</a>]
+			</p>
+		</li>
+
 		<li>
 			<p align="justify">
 			Raluca Gaina, Diego Perez Liebana, Alexander Dockhorn, Martin Balla and Raul Montoliu.
