--- a/src/books.html
+++ b/src/books.html
@@ -59,7 +59,7 @@
 	
 	<p>The book is in <b>Spanish</b>.</p>
 	
-	<p>The book is accesible in <a href="../docs/books/LibroMOOCCodInfo.pdf">pdf</a>.
+	<p>The book is accesible in <a href="../docs/LibroMOOCCodInfo.pdf">pdf</a>.
 	
 	
 	<hr>
