--- a/src/courses.html
+++ b/src/courses.html
@@ -46,7 +46,7 @@
 	<ul>
 		<li>UJI OCW <a href="http://ocw.uji.es/curso/922898">platform</a>.</li>
 		<li>Videos are also accesible <a href="https://www.youtube.com/playlist?list=PL9nqso-K-S-ecAKhbpoefP8GuyjW4BQ31">here</a>.</li>
-		<li>There is a <a href="../docs/books/LibroMOOCCodInfo.pdf">book</a> covering all the material.</li>
+		<li>There is a <a href="../docs/LibroMOOCCodInfo.pdf">book</a> covering all the material.</li>
 	</ul>		
 	</p>
 	<hr>
