--- a/src/research.html
+++ b/src/research.html
@@ -38,10 +38,23 @@
 	
 	<h2>List of my publications:</h2>
 
+
+
+
 	<h3>2020</h3>
 	<ul>
 
-				<li>
+        <li>
+            <p align="justify">
+            Emilio Sansano-Sansano, Fernando J. Aranda, Raúl Montoliu, Fernando J. Álvarez.
+            <b>BLE-GSpeed: A new BLE-based dataset to estimate user Gait Speed. </b>
+               Data. 2020
+               [<a href="https:https://www.mdpi.com/journal/data/special_issues/wearable_data">online version</a>]
+            </p>
+        </li>
+
+
+		<li>
 			<p align="justify">
 			Antonio Caballer, Oscar Belmonte, Andrea Castillo, Arturo Gasco, Emilio Sansano, Raul Montoliu.
 			<b>Equivalence of chatbot and paper-and-pencil versions of the De Jong Gierveld loneliness scale</b>.
@@ -112,7 +125,7 @@
 			<p align="justify">
 			O. Belmonte, E. Sansano, R. García-Vidal, R. Montoliu, A. Caballer-Miedes, E. Chinellato.
 			<b>Anomaly detection on Activities of Daily Living with Linear Drift</b>.	
-			Cognitive Computation, 2020.
+			Cognitive Computation, 12, pp. 1233–1251(2020)
 			[<a href="https://doi.org/10.1007/s12559-020-09740-6">online version</a>]
 			</p>
 	</ul>
