--- a/src/research.html
+++ b/src/research.html
@@ -49,7 +49,7 @@
             Emilio Sansano-Sansano, Fernando J. Aranda, Raúl Montoliu, Fernando J. Álvarez.
             <b>BLE-GSpeed: A new BLE-based dataset to estimate user Gait Speed. </b>
                Data. 2020
-               [<a href="https:https://www.mdpi.com/journal/data/special_issues/wearable_data">online version</a>]
+               [<a href="https://www.mdpi.com/journal/data/special_issues/wearable_data">online version</a>]
             </p>
         </li>
 
