--- a/src/research.html
+++ b/src/research.html
@@ -48,8 +48,9 @@
             <p align="justify">
             Emilio Sansano-Sansano, Fernando J. Aranda, Raúl Montoliu, Fernando J. Álvarez.
             <b>BLE-GSpeed: A new BLE-based dataset to estimate user Gait Speed. </b>
-               Data. 2020
-               [<a href="https://www.mdpi.com/journal/data/special_issues/wearable_data">online version</a>]
+               Data. 2020.
+               [<a href="https://www.mdpi.com/journal/data/special_issues/wearable_data">online version</a>], 
+               [<a href="http://doi.org/10.5281/zenodo.4261381">Database</a>], [<a href="https://github.com/esansano/ble-gspeed">Source code</a>]
             </p>
         </li>
 
