Eliminado pagina videogames

--- a/src/teaching.html
+++ b/src/teaching.html
@@ -21,7 +21,6 @@
 			<li class="selected"><a href="./teaching.html">Teaching</a></li>
 			<li><a href="./courses.html">Online courses</a></li>
 			<li><a href="./books.html">Books</a></li>
-			<li><a href="./videogames.html">Videogames</a></li>
 			<li><a href="./contact.html">Contact</a></li>
 		</ul>
 	</div>
@@ -35,10 +34,20 @@
 	 </p>
 
 
+ 	<h3>Asignaturas curso 2020/2021:</h3>
+	<ul>
+		<li><b>VJ1234</b>: T&eacute;cnicas de interacci&oacute;n avanzada. Grado en Diseño y Desarrollo de Videojuegos. </li>
+		<li><b>VJ1214</b>: Consolas y dispositivos de videojuegos. Grado en Diseño y Desarrollo de Videojuegos.</li>
+		<li><b>VJ1241</b>: Trabajo fin de grado. Grado en Diseño y Desarrollo de Videojuegos </li>			
+		<li><b>75.584</b>: Minería de datos. Universitat Oberta de Catalunya.
+	
+	</ul>	
+
  	<h3>Asignaturas curso 2019/2020:</h3>
 	<ul>
 		<li><b>VJ1234</b>: T&eacute;cnicas de interacci&oacute;n avanzada. Grado en Diseño y Desarrollo de Videojuegos. </li>
 		<li><b>VJ1214</b>: Consolas y dispositivos de videojuegos. Grado en Diseño y Desarrollo de Videojuegos.</li>	
+		<li><b>75.584</b>: Minería de datos. Universitat Oberta de Catalunya.
 	</ul>	
 
 
@@ -48,7 +57,8 @@
 		<li><b>VJ1234</b>: T&eacute;cnicas de interacci&oacute;n avanzada. Grado en Diseño y Desarrollo de Videojuegos. </li>
 		<li><b>VJ1214</b>: Consolas y dispositivos de videojuegos. Grado en Diseño y Desarrollo de Videojuegos.</li>	
 		<li><b>EI1014</b>: Sistemas operativos. Grado en Informática.</li>		
-		<li><b>EX1003</b>: Informática. Grados en Ingeniería Industrial, Mecánica y Eléctrica.</li>		
+		<li><b>EX1003</b>: Informática. Grados en Ingeniería Industrial, Mecánica y Eléctrica.</li>
+		<li><b>75.584</b>: Minería de datos. Universitat Oberta de Catalunya.	
 	</ul>	
 
    
