--- a/src/research.html
+++ b/src/research.html
@@ -48,7 +48,7 @@
             Emilio Sansano-Sansano, Fernando J. Aranda, Raúl Montoliu, Fernando J. Álvarez.
             <b>BLE-GSpeed: A new BLE-based dataset to estimate user Gait Speed. </b>
                Data. 2020.
-               [<a href="https://www.mdpi.com/journal/data/special_issues/wearable_data">online version</a>], 
+               [<a href="https://www.mdpi.com/2306-5729/5/4/115">online version</a>], 
                [<a href="http://doi.org/10.5281/zenodo.4261381">Database</a>], [<a href="https://github.com/esansano/ble-gspeed">Source code</a>]
             </p>
         </li>
