--- a/src/research.html
+++ b/src/research.html
@@ -38,7 +38,18 @@
 	<h2>List of my publications:</h2>
 
 
+    <h3>2021</h3>
+    <ul>
 
+        <li>
+            <p align="justify">
+                Fernando J. Aranda, Fernando J. Álvarez, Felipe Parralejo, Emilio Sansano-Sansano, Raúl Montoliu.
+                <b>A novel method for in-home Gait Speed estimation in Health Monitoring Using Bluetooth Low Energy.</b> 
+                22nd IEEE International Conference on Industrial Technology, ICIT'21, 2021.
+                [<a href="https://ieee-icit2021.org/">online version</a>]
+            </p>
+        </li>
+    </ul>
 
 	<h3>2020</h3>
 	<ul>
