--- a/src/research.html
+++ b/src/research.html
@@ -41,6 +41,13 @@
     <h3>2021</h3>
     <ul>
 
+         <li>
+            <p align="justify">
+                 O. Belmonte-Fernández, E. Sansano-Sansano, A. Caballer-Miedes, R. Montoliu, R. García-Vidal, A. Gascó-Compte <b>A Generative Method for Indoor Localization Using Wi-Fi Fingerprinting</b>                
+                [<a href="https://www.mdpi.com/journal/sensors/special_issues/Indoor_Positioning_E-health">online version</a>]
+            </p>
+        </li>
+
         <li>
             <p align="justify">
                 Fernando J. Aranda, Fernando J. Álvarez, Felipe Parralejo, Emilio Sansano-Sansano, Raúl Montoliu.
