--- a/src/research.html
+++ b/src/research.html
@@ -43,8 +43,7 @@
 
          <li>
             <p align="justify">
-                 O. Belmonte-Fernández, E. Sansano-Sansano, A. Caballer-Miedes, R. Montoliu, R. García-Vidal, A. Gascó-Compte <b>A Generative Method for Indoor Localization Using Wi-Fi Fingerprinting</b>                
-                [<a href="https://www.mdpi.com/journal/sensors/special_issues/Indoor_Positioning_E-health">online version</a>]
+                 O. Belmonte-Fernández, E. Sansano-Sansano, A. Caballer-Miedes, R. Montoliu, R. García-Vidal, A. Gascó-Compte <b>A Generative Method for Indoor Localization Using Wi-Fi Fingerprinting</b> Sensors 21(7), 2021. [<a href="https://www.mdpi.com/1424-8220/21/7/2392">online version</a>]
             </p>
         </li>
 
