--- a/src/research.html
+++ b/src/research.html
@@ -351,6 +351,17 @@
              [<a href="http://www.diego-perez.net/papers/TAG_Tabletop_Games_Framework.pdf"]>online version</a>]
             </p>
         </li>
+        <li>
+            <p align="justify">
+            R. Montoliu, R.D. Gaina, D. Perez-Leibana. D. Delgado, S. Lucas.
+            <b>Efficient Heuristic Policy Optimisation for a Challenging Strategic Card Game</b>.
+            23rd International Conference on the Applications of Evolutionary and Bio-inspired Computation (EVOSTAR'20).
+             [<a href=https://link.springer.com/chapter/10.1007/978-3-030-43722-0_26"]>online version</a>]
+            </p>
+        </li>
+
+
+   
     
     <li>
             <p align="justify">
