--- a/src/research.html
+++ b/src/research.html
@@ -54,7 +54,7 @@
 
 		<li> Book chapters:     10</li>
         
-        <li> Conferences:       33  </li>
+        <li> Conferences:       36  </li>
 		
         <li> Pre prints (arXiv): 2 </li>
 
@@ -341,6 +341,30 @@
                 <b>A novel method for in-home Gait Speed estimation in Health Monitoring Using Bluetooth Low Energy.</b> 
                 22nd IEEE International Conference on Industrial Technology, ICIT'21, 2021.
                 [<a href="https://ieee-icit2021.org/">online version</a>]
+            </p>
+        </li>
+                <li>
+            <p align="justify">
+                Raúl Montoliu, Emilio Sansano-Sansano
+                <b>Unsupervised detection of transitions at home by using BLE technology.</b> 
+                11th International Conference on Indoor Positioing and Indoor Navigation, IPIN'21, 2021.
+                [<a href="https://ipin-conference.org/2021/">online version</a>]
+            </p>
+        </li>
+        <li>
+            <p align="justify">
+                Raúl Montoliu, Emilio Sansano-Sansano.
+                <b>Detección no supervisada de transiciones dentro del hogar mediante tecnología BLE.</b> 
+                28th Seminario Anual de Automática, Electrónica Industrial e Instrumentación, SAAEI'21
+                [<a href="http://www.saaei.org/ediciones/edicion2021/">online version</a>]
+            </p>
+        </li>
+                <li>
+            <p align="justify">
+                Raúl Montoliu, Emilio Sansano-Sansano, Arturo Gascó.
+                <b>Sistema de posicionamiento en interiores en el hogar usando balizas Bluetooth Low Energy</b> 
+                27th Seminario Anual de Automática, Electrónica Industrial e Instrumentación, SAAEI'20
+                [<a href="http://www.saaei.org/ediciones/edicion2020/">online version</a>]
             </p>
         </li>
         <li>
