--- a/src/research.html
+++ b/src/research.html
@@ -54,7 +54,7 @@
 
 		<li> Book chapters:     10</li>
         
-        <li> Conferences:       36  </li>
+        <li> Conferences:       38  </li>
 		
         <li> Pre prints (arXiv): 2 </li>
 
@@ -334,6 +334,50 @@
 
     <h3> Conferences</h3>
     <ul>
+      <li>
+          <p align="justify">
+                Diego Villabrille Seca, Raúl Montoliu.
+                <b>ASMACAG: Un nuevo juego de cartas multi acción para facilitar el estudio de técnicas de IA</b> 
+                1er Congreso Internacional de DiGRA España 2021 (DIGRAES21).
+                [<a href="https://videojocs.tecnocampus.cat/digraes21/">online version</a>]
+            </p>
+        </li>
+              <li>
+          <p align="justify">
+                Juan José Muñoz Falcó, Raúl Montoliu.
+                <b>Concepto de localidad en las aventuras de texto y análisis de ubicaciones geográficas reales en los juegos de Aventuras AD</b> 
+                1er Congreso Internacional de DiGRA España 2021 (DIGRAES21).
+                [<a href="https://videojocs.tecnocampus.cat/digraes21/">online version</a>]
+            </p>
+        </li>
+
+              <li>
+            <p align="justify">
+                Fernando J. Aranda, Fernando J. Álvarez, Felipe Parralejo, Emilio Sansano-Sansano, Raúl Montoliu.
+                <b>A novel method for in-home Gait Speed estimation in Health Monitoring Using Bluetooth Low Energy.</b> 
+                22nd IEEE International Conference on Industrial Technology, ICIT'21, 2021.
+                [<a href="https://ieee-icit2021.org/">online version</a>]
+            </p>
+        </li>
+
+      <li>
+            <p align="justify">
+                Fernando J. Aranda, Fernando J. Álvarez, Felipe Parralejo, Emilio Sansano-Sansano, Raúl Montoliu.
+                <b>A novel method for in-home Gait Speed estimation in Health Monitoring Using Bluetooth Low Energy.</b> 
+                22nd IEEE International Conference on Industrial Technology, ICIT'21, 2021.
+                [<a href="https://ieee-icit2021.org/">online version</a>]
+            </p>
+        </li>
+
+              <li>
+            <p align="justify">
+                Fernando J. Aranda, Fernando J. Álvarez, Felipe Parralejo, Emilio Sansano-Sansano, Raúl Montoliu.
+                <b>A novel method for in-home Gait Speed estimation in Health Monitoring Using Bluetooth Low Energy.</b> 
+                22nd IEEE International Conference on Industrial Technology, ICIT'21, 2021.
+                [<a href="https://ieee-icit2021.org/">online version</a>]
+            </p>
+        </li>
+
 
         <li>
             <p align="justify">
