--- a/src/research.html
+++ b/src/research.html
@@ -54,7 +54,7 @@
 
 		<li> Book chapters:     10</li>
         
-        <li> Conferences:       38  </li>
+        <li> Conferences:       39  </li>
 		
         <li> Pre prints (arXiv): 2 </li>
 
@@ -335,6 +335,9 @@
     <h3> Conferences</h3>
     <ul>
       <li>
+
+
+
           <p align="justify">
                 Diego Villabrille Seca, Raúl Montoliu.
                 <b>ASMACAG: Un nuevo juego de cartas multi acción para facilitar el estudio de técnicas de IA</b> 
@@ -350,36 +353,8 @@
                 [<a href="https://videojocs.tecnocampus.cat/digraes21/">online version</a>]
             </p>
         </li>
-
-              <li>
-            <p align="justify">
-                Fernando J. Aranda, Fernando J. Álvarez, Felipe Parralejo, Emilio Sansano-Sansano, Raúl Montoliu.
-                <b>A novel method for in-home Gait Speed estimation in Health Monitoring Using Bluetooth Low Energy.</b> 
-                22nd IEEE International Conference on Industrial Technology, ICIT'21, 2021.
-                [<a href="https://ieee-icit2021.org/">online version</a>]
-            </p>
-        </li>
-
+          
       <li>
-            <p align="justify">
-                Fernando J. Aranda, Fernando J. Álvarez, Felipe Parralejo, Emilio Sansano-Sansano, Raúl Montoliu.
-                <b>A novel method for in-home Gait Speed estimation in Health Monitoring Using Bluetooth Low Energy.</b> 
-                22nd IEEE International Conference on Industrial Technology, ICIT'21, 2021.
-                [<a href="https://ieee-icit2021.org/">online version</a>]
-            </p>
-        </li>
-
-              <li>
-            <p align="justify">
-                Fernando J. Aranda, Fernando J. Álvarez, Felipe Parralejo, Emilio Sansano-Sansano, Raúl Montoliu.
-                <b>A novel method for in-home Gait Speed estimation in Health Monitoring Using Bluetooth Low Energy.</b> 
-                22nd IEEE International Conference on Industrial Technology, ICIT'21, 2021.
-                [<a href="https://ieee-icit2021.org/">online version</a>]
-            </p>
-        </li>
-
-
-        <li>
             <p align="justify">
                 Fernando J. Aranda, Fernando J. Álvarez, Felipe Parralejo, Emilio Sansano-Sansano, Raúl Montoliu.
                 <b>A novel method for in-home Gait Speed estimation in Health Monitoring Using Bluetooth Low Energy.</b> 
@@ -392,7 +367,7 @@
                 Raúl Montoliu, Emilio Sansano-Sansano
                 <b>Unsupervised detection of transitions at home by using BLE technology.</b> 
                 11th International Conference on Indoor Positioing and Indoor Navigation, IPIN'21, 2021.
-                [<a href="https://ipin-conference.org/2021/">online version</a>]
+                [<a href="https://doi.org/10.1109/IPIN51156.2021.9662578">online version</a>]
             </p>
         </li>
         <li>
