--- a/src/research.html
+++ b/src/research.html
@@ -42,10 +42,10 @@
 
         <li> Patents: 1 </li>
 
-		<li> Journals: 30
+		<li> Journals: 31
 			<ul>
 				<li> Q1: 10</li>
-				<li> Q2:  8</li>
+				<li> Q2:  9</li>
 				<li> Q3:  3</li>
 				<li> Q4:  6</li>
 				<li> Other: 3</li>
@@ -85,6 +85,12 @@
 
     <h3> Journals</h3>
     <ul>
+         <li>
+            <p align="justify">E. Sansano-Sansano, R. Motoliu, O. Belmonte-Fernández, F.J. Aranda, F.J. Álvarez. <b>Continuous non-invasive Assessment of Gait Speed through Bluetooth Low Energy</b> IEEE Sensors Journal, In press, 2022.
+            [<a href="https://doi.org/10.1109/JSEN.2022.3157137">https://doi.org/10.1109/JSEN.2022.3157137
+            </a>]
+            </p>
+        </li>
 
          <li>
             <p align="justify">
