--- a/src/research.html
+++ b/src/research.html
@@ -54,7 +54,7 @@
 
 		<li> Book chapters:     10</li>
         
-        <li> Conferences:       39  </li>
+        <li> Conferences:       40  </li>
 		
         <li> Pre prints (arXiv): 2 </li>
 
@@ -340,9 +340,16 @@
 
     <h3> Conferences</h3>
     <ul>
-      <li>
+      
 
-
+        <li>
+            <p align="justify">
+                Raúl Montoliu, Antoni Perez-Navarro, Joaquín Torres-Sospedra.
+                <b>Ajuste eficiente de los hiperparametros de kNN para posicionamiento en interiores con N-TBEA.</b> 
+                29th Seminario Anual de Automática, Electrónica Industrial e Instrumentación, SAAEI'22.
+                <!--[<a href="http://www.saaei.org/ediciones/edicion2021/">online version</a>]-->
+            </p>
+        </li>
 
           <p align="justify">
                 Diego Villabrille Seca, Raúl Montoliu.
