--- a/src/research.html
+++ b/src/research.html
@@ -54,7 +54,7 @@
 
 		<li> Book chapters:     10</li>
         
-        <li> Conferences:       40  </li>
+        <li> Conferences:       41  </li>
 		
         <li> Pre prints (arXiv): 2 </li>
 
@@ -351,6 +351,18 @@
             </p>
         </li>
 
+          <li>
+            <p align="justify">
+            R. Montoliu, C. Rebollo, D. Díaz, I. Remolar.
+            <b>Reflexiones sobre por qué el estudiantado no acude a las actividades complementarias y propuesta de soluciones</b>.
+            XXVIII Edición de las Jornadas sobre la Enseñanza Universitaria de la Informática
+            <a href="https://jenui2022.udc.es/">JENUI'22</a>.
+
+            <!--[<a href="http://www.aenui.net/ojs/index.php?journal=actas_jenui&page=article&op=download&path%5B%5D=477&path%5B%5D=693">online version</a>].-->
+
+            </p>
+        </li>
+        <li>
           <p align="justify">
                 Diego Villabrille Seca, Raúl Montoliu.
                 <b>ASMACAG: Un nuevo juego de cartas multi acción para facilitar el estudio de técnicas de IA</b> 
