--- a/src/research.html
+++ b/src/research.html
@@ -356,9 +356,8 @@
             R. Montoliu, C. Rebollo, D. Díaz, I. Remolar.
             <b>Reflexiones sobre por qué el estudiantado no acude a las actividades complementarias y propuesta de soluciones</b>.
             XXVIII Edición de las Jornadas sobre la Enseñanza Universitaria de la Informática
-            <a href="https://jenui2022.udc.es/">JENUI'22</a>.
-
-            <!--[<a href="http://www.aenui.net/ojs/index.php?journal=actas_jenui&page=article&op=download&path%5B%5D=477&path%5B%5D=693">online version</a>].-->
+            <a href="https://jenui2022.udc.es/">JENUI'22</a>.[
+            [<a href="https://aenui.org/actas/pdf/JENUI_2022_039.pdf">online version</a>].
 
             </p>
         </li>
