--- a/src/research.html
+++ b/src/research.html
@@ -18,9 +18,6 @@
 		<ul>
 			<li><a href="../index.html">Home</a></li>
 			<li class="selected"><a href="./research.html">Research</a></li>
-			<li><a href="./teaching.html">Teaching</a></li>
-			<li><a href="./courses.html">Online courses</a></li>
-			<li><a href="./books.html">Books</a></li>
 			<li><a href="./contact.html">Contact</a></li>
 		</ul>
 	</div>
@@ -54,7 +51,7 @@
 
 		<li> Book chapters:     10</li>
         
-        <li> Conferences:       41  </li>
+        <li> Conferences:       43  </li>
 		
         <li> Pre prints (arXiv): 2 </li>
 
@@ -86,7 +83,7 @@
     <h3> Journals</h3>
     <ul>
          <li>
-            <p align="justify">E. Sansano-Sansano, R. Motoliu, O. Belmonte-Fernández, F.J. Aranda, F.J. Álvarez. <b>Continuous non-invasive Assessment of Gait Speed through Bluetooth Low Energy</b> IEEE Sensors Journal, In press, 2022.
+            <p align="justify">E. Sansano-Sansano, R. Montoliu, O. Belmonte-Fernández, F.J. Aranda, F.J. Álvarez. <b>Continuous non-invasive Assessment of Gait Speed through Bluetooth Low Energy</b> IEEE Sensors Journal, Vol 22 (8), 2022.
             [<a href="https://doi.org/10.1109/JSEN.2022.3157137">https://doi.org/10.1109/JSEN.2022.3157137
             </a>]
             </p>
@@ -340,14 +337,32 @@
 
     <h3> Conferences</h3>
     <ul>
+
+
+        <li>
+            <p align="justify">
+                R. Montoliu, A. Pérez-Navarro, J. Torres-Sospedra.
+                <b>Efficient tuning of kNN hyperparameters for indoor positioning with N-TBEA</b> 
+                 International Congress on Ultra Modern Telecommunications and Control Systems, ICUMT'22.
+                [<a href="https://www.icumt.info/2022//">Conference web</a>]
+            </p>
+        </li>
       
+        <li>
+            <p align="justify">
+                S. Lluva Plaza, R. Montoliu Colás, A. Jiménez Martín, J.M. Villadangos Carrizo, E. Sansano Sansano and J.J. García Domínguez.
+                <b>A Novel BLE RSSI Database for Analyzing Routines of Community-Dwelling Older Adults</b> 
+                 International Congress on Ultra Modern Telecommunications and Control Systems, ICUMT'22.
+                [<a href="https://www.icumt.info/2022//">Conference web</a>]
+            </p>
+        </li>
 
         <li>
             <p align="justify">
                 Raúl Montoliu, Antoni Perez-Navarro, Joaquín Torres-Sospedra.
                 <b>Ajuste eficiente de los hiperparametros de kNN para posicionamiento en interiores con N-TBEA.</b> 
                 29th Seminario Anual de Automática, Electrónica Industrial e Instrumentación, SAAEI'22.
-                <!--[<a href="http://www.saaei.org/ediciones/edicion2021/">online version</a>]-->
+                [<a href="https://www.saaei.org/ediciones/edicion2022/">Conference web</a>]
             </p>
         </li>
 
@@ -640,7 +655,7 @@
 
 	
 	<div id="footer">
-		<p>&copy; 2020 Ra&uacute;l Montoliu | Design based on <a href="http://andreasviklund.com/">free website templates</a></p>
+		<p>&copy; 2022 Ra&uacute;l Montoliu | Design based on <a href="http://andreasviklund.com/">free website templates</a></p>
 	</div>
 </div>
 
