--- a/src/research.html
+++ b/src/research.html
@@ -39,9 +39,9 @@
 
         <li> Patents: 1 </li>
 
-		<li> Journals: 31
+		<li> Journals: 32
 			<ul>
-				<li> Q1: 10</li>
+				<li> Q1: 11</li>
 				<li> Q2:  9</li>
 				<li> Q3:  3</li>
 				<li> Q4:  6</li>
@@ -82,6 +82,13 @@
 
     <h3> Journals</h3>
     <ul>
+
+
+         <li>
+            <p align="justify">A. Batalla-Gavalda, J.V. Beltran-Garrido, G. Garrosa-Martín, P. Cecilia-Gallego, R. Montoliu, F. Cobi. 
+            <b>Rate of Perceived Exertion as an Indicator of Intensity in Women's Basketball</b> Acepted to publication in Biology.
+            </p>
+        </li>
          <li>
             <p align="justify">E. Sansano-Sansano, R. Montoliu, O. Belmonte-Fernández, F.J. Aranda, F.J. Álvarez. <b>Continuous non-invasive Assessment of Gait Speed through Bluetooth Low Energy</b> IEEE Sensors Journal, Vol 22 (8), 2022.
             [<a href="https://doi.org/10.1109/JSEN.2022.3157137">https://doi.org/10.1109/JSEN.2022.3157137
@@ -371,7 +378,7 @@
             R. Montoliu, C. Rebollo, D. Díaz, I. Remolar.
             <b>Reflexiones sobre por qué el estudiantado no acude a las actividades complementarias y propuesta de soluciones</b>.
             XXVIII Edición de las Jornadas sobre la Enseñanza Universitaria de la Informática
-            <a href="https://jenui2022.udc.es/">JENUI'22</a>.[
+            <a href="https://jenui2022.udc.es/">JENUI'22</a>.
             [<a href="https://aenui.org/actas/pdf/JENUI_2022_039.pdf">online version</a>].
 
             </p>
