--- a/src/research.html
+++ b/src/research.html
@@ -39,13 +39,13 @@
 
         <li> Patents: 1 </li>
 
-		<li> Journals: 32
+		<li> Journals: 33 (29 JCR)
 			<ul>
-				<li> Q1: 11</li>
-				<li> Q2:  9</li>
-				<li> Q3:  3</li>
-				<li> Q4:  6</li>
-				<li> Other: 3</li>
+				<li> Q1: 12</li>
+				<li> Q2:  7</li>
+				<li> Q3:  5</li>
+				<li> Q4:  5</li>
+				<li> Other: 4</li>
 			</ul>
 		</li>
 
