--- a/src/research.html
+++ b/src/research.html
@@ -86,7 +86,7 @@
 
          <li>
             <p align="justify">A. Batalla-Gavalda, J.V. Beltran-Garrido, G. Garrosa-Martín, P. Cecilia-Gallego, R. Montoliu, F. Cobi. 
-            <b>Rate of Perceived Exertion as an Indicator of Intensity in Women's Basketball</b> Acepted to publication in Biology.
+            <b>Rate of Perceived Exertion as an Indicator of Intensity in Women's Basketball</b> Biology, 11(11):1592, 2022. [<a href="https://doi.org/10.3390/biology11111592">ttps://doi.org/10.3390/biology11111592</a>].
             </p>
         </li>
          <li>
