--- a/src/research.html
+++ b/src/research.html
@@ -51,7 +51,7 @@
 
 		<li> Book chapters:     10</li>
         
-        <li> Conferences:       43  </li>
+        <li> Conferences:       45  </li>
 		
         <li> Pre prints (arXiv): 2 </li>
 
@@ -344,7 +344,23 @@
 
     <h3> Conferences</h3>
     <ul>
+        <li>
+            <p align="justify">
+                Raul Montoliu, Adrian Mon-Maroto, Emilio Sansano-Sansano and Ignacio Miralles-Tena
+                <b>Analysis of The Witcher 3: Wild hunt's quests</b>. 
+                I Congreso Español de Videojuegos (CEV'22)
+                [<a href="https://https://secivi.org/cev/index.html//">Conference web</a>]
+            </p>
+        </li>
 
+        <li>
+            <p align="justify">
+                Raul Montoliu and Diego Villabrille Seca
+                <b>NTBOE: A new algorithm for efficiently playing multi-action adversarial games</b>.
+                 I Congreso Español de Videojuegos (CEV'22)
+                [<a href="https://https://secivi.org/cev/index.html//">Conference web</a>]
+            </p>
+        </li>
 
         <li>
             <p align="justify">
